--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "11.0.1",
+    "preact": "^10.5.14",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.37.5"
@@ -19,8 +20,8 @@
     "@casper124578/eslint-config-next": "^0.0.5",
     "@casper124578/eslint-config-react": "^0.0.6",
     "@types/react": "17.0.16",
+    "@types/react-dom": "^17.0.9",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.0.1",
     "typescript": "4.3.5"
   }
 }
