--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flag-guesser",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,17 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "11.0.1",
+    "next": "11.1.0",
     "preact": "^10.5.14",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "sass": "^1.37.5"
   },
   "devDependencies": {
     "@casper124578/eslint-config": "^0.0.16",
     "@casper124578/eslint-config-next": "^0.0.5",
     "@casper124578/eslint-config-react": "^0.0.6",
-    "@types/react": "17.0.16",
+    "@types/react": "17.0.17",
     "@types/react-dom": "^17.0.9",
     "eslint": "7.32.0",
     "typescript": "4.3.5"
