--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 4000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -13,14 +13,14 @@
     "preact": "^10.5.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "sass": "^1.42.1"
+    "sass": "^1.43.4"
   },
   "devDependencies": {
     "@casper124578/eslint-config": "^1.0.0",
     "@casper124578/eslint-config-next": "^0.1.1",
     "@casper124578/eslint-config-react": "^0.1.2",
     "@types/react": "17.0.33",
-    "@types/react-dom": "^17.0.9",
+    "@types/react-dom": "^17.0.10",
     "eslint": "8.1.0",
     "typescript": "4.4.4"
   }
