--- a/package.json
+++ b/package.json
@@ -9,19 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.2",
+    "next": "12.0.5",
     "preact": "^10.5.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "sass": "^1.43.4"
+    "sass": "^1.44.0"
   },
   "devDependencies": {
-    "@casper124578/eslint-config": "^1.0.0",
-    "@casper124578/eslint-config-next": "^0.1.1",
-    "@casper124578/eslint-config-react": "^0.1.2",
-    "@types/react": "17.0.33",
-    "@types/react-dom": "^17.0.10",
-    "eslint": "8.1.0",
-    "typescript": "4.4.4"
+    "@casper124578/eslint-config": "^2.2.0",
+    "@casper124578/eslint-config-next": "^1.1.0",
+    "@casper124578/eslint-config-react": "^2.2.0",
+    "@types/react": "17.0.37",
+    "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "eslint": "8.4.0",
+    "eslint-plugin-promise": "^5.2.0",
+    "typescript": "4.5.2"
   }
 }
