--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,7 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "ESNext",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
@@ -32,27 +28,13 @@
     "noUncheckedIndexedAccess": true /* Include 'undefined' in index signature results */,
     "baseUrl": ".",
     "paths": {
-      "components/*": [
-        "./src/components/*"
-      ],
-      "lib/*": [
-        "./src/lib/*"
-      ],
-      "types/*": [
-        "./src/types/*"
-      ],
-      "styles/*": [
-        "./src/styles/*"
-      ]
+      "components/*": ["./src/components/*"],
+      "lib/*": ["./src/lib/*"],
+      "types/*": ["./src/types/*"],
+      "styles/*": ["./src/styles/*"]
     },
     "incremental": true
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "next.config.js"],
+  "exclude": ["node_modules"]
 }
